<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RUNT</string>
    <string name="action_settings">Settings</string>
    <string name="plot">Plot</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
    <string name="notUpdating">Not tracking</string>
    <string name="title_route_list">Routes</string>
    <string name="title_route_detail">Route Detail</string>
    <string name="change_activity">List</string>
    <string name="title_activity_launch">Running</string>
    <string name="title_activity_prefs">Preferences</string>
    <string name="username">username</string>
    <string name="autoupload">autoupload</string>
    <string name="save">save</string>
    <string name="title_activity_routes_list">My Runs</string>
    <string name="title_activity_route_map">Run</string>
    <string name="home">Home</string>
    <string name="title_activity_shared_menu">SharedMenuActivity</string>
    <string name="title_activity_results">Route Info</string>
    <string name="sync_to_server">Sync to Server</string>
    <string name="sync_from_server">Sync from Server</string>
    <string name="upload_to_server">Upload to Server</string>

</resources>
